revert bottom alignemnt

--- a/platser.html
+++ b/platser.html
@@ -10,8 +10,6 @@
     <style>
         body {
             background: #F3F3F3;
-            margin: 0;
-            padding: 0;
         }
 
         div.aboutDiv {
@@ -32,23 +30,6 @@
 
         .recent-search-item:hover {
             text-decoration: none;
-        }
-
-        @media (max-width: 1080px) {
-            #plats-search {
-                position: fixed;
-                bottom: 20px;
-                left: 0;
-                right: 0;
-                padding: 10px;
-                background: #F3F3F3;
-                z-index: 1000;
-                box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-            }
-
-            #recent-searches {
-                padding-bottom: 60px; /* Make sure recent searches are not hidden behind the fixed search bar */
-            }
         }
     </style>
 </head>
@@ -71,6 +52,9 @@
     <script src="platser.js" charset="UTF-8"></script>
 
     <script>
+        // Automatic display soft keyboard on ios
+        //document.body.ontouchend = function() { document.querySelector"#plats-search input").focus(); };
+
         window.onload = function () {
             var input = document.querySelector("#plats-search input").focus();
             displayRecentSearches();
