--- a/platser.html
+++ b/platser.html
@@ -3,7 +3,7 @@
 <head>
     <title>Anders Väder - Sök plats</title>
     <meta charset=UTF-8>
-    <meta name=viewport content="width=device-width, initial-scale=1.2">
+    <meta name=viewport content="width=device-width">
     <link rel=icon href=images/favicon.png> 
     <link rel='stylesheet' href='https://cdn.rawgit.com/LeaVerou/awesomplete/gh-pages/awesomplete.css' />
 
