--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
   <div>
     <br>
   </div>
+  <div id="commentDiv">
+  </div>
+    <div>
+    <br>
+  </div>
   <div id="aboutDiv">
   </div>
   <!--
