--- a/platser.html
+++ b/platser.html
@@ -7,31 +7,54 @@
     <link rel=icon href=images/favicon.png> 
     <link rel='stylesheet' href='https://cdn.rawgit.com/LeaVerou/awesomplete/gh-pages/awesomplete.css' />
 
-    <style>
-        body {
-            background: #F3F3F3;
-        }
+<style>
+    /* 1. Full-height base & reset */
+    html, body {
+      height: 100%;
+      margin: 0;
+      background: #F3F3F3;
+    }
 
-        div.aboutDiv {
-            font-size: small;
-        }
+    /* 2. Push the search section down 1/3 and give it some side padding */
+    #plats-search {
+      margin-block-start: 33vh;    /* 1/3rd down */
+      padding-inline-start: 1rem; /* small left inset */
+    }
 
-        .recent-searches {
-            margin-top: 10px;
-            line-height: 1.5;
-        }
+    /* 3. Bigger, left-aligned heading */
+    #plats-search h2 {
+      font-size: 2rem;
+      margin-bottom: 0.5em;
+      /* text-align: left is default */
+    }
 
-        .recent-search-item {
-            cursor: pointer;
-            color: blue;
-            text-decoration: underline;
-            display: block;
-        }
+    /* 4. Larger input text, left aligned */
+    #plats-search input {
+      font-size: 1.25rem;
+      padding: 0.5em;
+      width: 80%;
+      max-width: 400px;
+      /* block-level inputs are left aligned by default */
+    }
 
-        .recent-search-item:hover {
-            text-decoration: none;
-        }
-    </style>
+    /* 5. Other styles unchanged */
+    .aboutDiv {
+      font-size: small;
+    }
+    .recent-searches {
+      margin-top: 10px;
+      line-height: 1.5;
+    }
+    .recent-search-item {
+      cursor: pointer;
+      color: blue;
+      text-decoration: underline;
+      display: block;
+    }
+    .recent-search-item:hover {
+      text-decoration: none;
+    }
+  </style>
 </head>
 
 <body>
