--- a/platser.html
+++ b/platser.html
@@ -7,54 +7,31 @@
     <link rel=icon href=images/favicon.png> 
     <link rel='stylesheet' href='https://cdn.rawgit.com/LeaVerou/awesomplete/gh-pages/awesomplete.css' />
 
-<style>
-    /* 1. Full-height base & reset */
-    html, body {
-      height: 100%;
-      margin: 0;
-      background: #F3F3F3;
-    }
+    <style>
+        body {
+            background: #F3F3F3;
+        }
 
-    /* 2. Push the search section down 1/3 and give it some side padding */
-    #plats-search {
-      margin-block-start: 33vh;    /* 1/3rd down */
-      padding-inline-start: 1rem; /* small left inset */
-    }
+        div.aboutDiv {
+            font-size: small;
+        }
 
-    /* 3. Bigger, left-aligned heading */
-    #plats-search h2 {
-      font-size: 2rem;
-      margin-bottom: 0.5em;
-      /* text-align: left is default */
-    }
+        .recent-searches {
+            margin-top: 10px;
+            line-height: 1.5;
+        }
 
-    /* 4. Larger input text, left aligned */
-    #plats-search input {
-      font-size: 1.25rem;
-      padding: 0.5em;
-      width: 80%;
-      max-width: 400px;
-      /* block-level inputs are left aligned by default */
-    }
+        .recent-search-item {
+            cursor: pointer;
+            color: blue;
+            text-decoration: underline;
+            display: block;
+        }
 
-    /* 5. Other styles unchanged */
-    .aboutDiv {
-      font-size: small;
-    }
-    .recent-searches {
-      margin-top: 10px;
-      line-height: 1.5;
-    }
-    .recent-search-item {
-      cursor: pointer;
-      color: blue;
-      text-decoration: underline;
-      display: block;
-    }
-    .recent-search-item:hover {
-      text-decoration: none;
-    }
-  </style>
+        .recent-search-item:hover {
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body>
